2008-05-13  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/main.py:

	Make sure the repo uri doesn't have a trailing '/' when extraction
	the repo name from the uri.
	
2008-05-09  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Added missing file and commit identifiers in metrics table.
	
2008-05-08  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Added CMetrics support.

2008-05-07  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Force svn update and added missing 'get_type()'.

2008-05-06  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	SVN Metrics support.
	
2008-05-05  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Readable SQL statements.

2008-05-05  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Caught checkout exceptions.

2008-04-21  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FilePaths.py:

	Deleted '/' from the beginning of each path.

2008-04-09  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/extensions/FilePaths.py:

	Use to_utf8 instead of unicode.
	
2008-04-09  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* pycvsanaly2/main.py:

	Removed invalid comment (# parser.run () by carlosgc)

2008-04-03  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/main.py:
	* pycvsanaly2/ExtensionsManager.py:
	* pycvsanaly2/extensions/Metrics.py:
	* pycvsanaly2/extensions/__init__.py:

	Implement extensions dependencies system.
	
2008-04-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly2/CVSParser.py:

	Save file paths relative to the repository root path for CVS.
	
2008-04-01  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>
